force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <description>It is used to store the Book Details.</description>
    <label>Book</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>