force-app/main/default/objects/Book__c/fields/Author_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Name__c</fullName>
    <description>It is used to store Author Name</description>
    <label>Author Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>