force-app/main/default/objects/Book__c/fields/Available_Copies__c.field-meta.xml
<CustomField>
    <fullName>Available_Copies__c</fullName>
    <description>It is used to store available books</description>
    <label>Available Copies</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>