force-app/main/default/objects/Book__c/fields/ISBN_Number__c.field-meta.xml
<CustomField>
    <fullName>ISBN_Number__c</fullName>
    <description>It is used to store ISBN( International Standard Book Number ).</description>
    <inlineHelpText>ISBN stands for International Standard Book Number for unique reference</inlineHelpText>
    <label>ISBN Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>