force-app/main/default/objects/Book__c/fields/Low_Stock_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Low_Stock_Indicator__c</fullName>
    <description>It is used to find when the stock  is low.</description>
    <formula>Available_Copies__c &lt; 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Low Stock Indicator</label>
    <type>Checkbox</type>
</CustomField>