force-app/main/default/objects/Book__c/validationRules/BK0002_Validate_ISBN_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>BK0002_Validate_ISBN_Length</fullName>
    <active>true</active>
    <description>It is used to validate the ISBN length must be in 13 character</description>
    <errorConditionFormula>LEN( ISBN_Number__c ) != 13</errorConditionFormula>
    <errorDisplayField>ISBN_Number__c</errorDisplayField>
    <errorMessage>ISBN Number must contain 13 character</errorMessage>
</ValidationRule>